eks-ingress/eks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:445839263969:certificate/c4ddf359-86ee-4017-a926-2667ef63dec1
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/subnets: subnet-0b592f4400d992d94,subnet-08456b46622987164,subnet-05632553250e004b3
    alb.ingress.kubernetes.io/load-balancer-name: eks-ingress
    alb.ingress.kubernetes.io/group.name: shared-eks-alb
  name: argocd
  namespace: argocd
spec:
  rules:
    - host: argocd.pathyapushtak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
